; ModuleID = '/home/carl/AnghaBench/vlc/modules/audio_output/extr_coreaudio_common.c_ca_ClearOutBuffers.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/audio_output/extr_coreaudio_common.c_ca_ClearOutBuffers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.aout_sys_common = type { i64, i32*, i32** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @ca_ClearOutBuffers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ca_ClearOutBuffers(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.aout_sys_common*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to %struct.aout_sys_common*
  store %struct.aout_sys_common* %7, %struct.aout_sys_common** %3, align 8
  %8 = load %struct.aout_sys_common*, %struct.aout_sys_common** %3, align 8
  %9 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @block_ChainRelease(i32* %10)
  %12 = load %struct.aout_sys_common*, %struct.aout_sys_common** %3, align 8
  %13 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %12, i32 0, i32 1
  store i32* null, i32** %13, align 8
  %14 = load %struct.aout_sys_common*, %struct.aout_sys_common** %3, align 8
  %15 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %14, i32 0, i32 1
  %16 = load %struct.aout_sys_common*, %struct.aout_sys_common** %3, align 8
  %17 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %16, i32 0, i32 2
  store i32** %15, i32*** %17, align 8
  %18 = load %struct.aout_sys_common*, %struct.aout_sys_common** %3, align 8
  %19 = getelementptr inbounds %struct.aout_sys_common, %struct.aout_sys_common* %18, i32 0, i32 0
  store i64 0, i64* %19, align 8
  ret void
}

declare dso_local i32 @block_ChainRelease(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
